added cities section

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -151,6 +151,81 @@
                </div>
             </div>
         </section>
+
+        <section class="section__cities">
+            <div class="row">
+                <h2 class="heading-secondary">We're currently in the these cities</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-4 box">
+                    <img class="city__features--img" src="./images/lisbon-3.jpg" alt="Lisbon">
+                    <h3 class="heading-tertiary">Lisbon</h3>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        600+ happy eaters
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        60+ top chefs 
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>                        
+                        <a href="" class="city__features--link">@omnifood_xl</a> 
+                    </div>     
+                </div>
+
+                <div class="col span-1-of-4 box">
+                    <img class="city__features--img" src="./images/san-francisco.jpg" alt="San Francisco">
+                    <h3 class="heading-tertiary">San Francisco</h3>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        3700+ happy eaters
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        160+ top chefs 
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>                        
+                        <a href="" class="city__features--link">@omnifood_xl</a> 
+                    </div>     
+                </div>
+
+                <div class="col span-1-of-4 box">
+                    <img class="city__features--img" src="./images/berlin.jpg" alt="Berlin">
+                    <h3 class="heading-tertiary">Berlin</h3>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        2300+ happy eaters
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        110+ top chefs 
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>                        
+                        <a href="" class="city__features--link">@omnifood_xl</a> 
+                    </div>     
+                </div>
+
+                <div class="col span-1-of-4 box">
+                    <img class="city__features--img" src="./images/london.jpg" alt="London">
+                    <h3 class="heading-tertiary">London</h3>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        1200+ happy eaters
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        50+ top chefs 
+                    </div>
+                    <div class="city__features">
+                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>                        
+                        <a href="" class="city__features--link">@omnifood_xl</a> 
+                    </div>     
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
