--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -226,9 +226,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="section__testimonials">
+            <div class="row">
+                <h2 class="heading-secondary">Our costumers can't live without us</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3 box">
+                    <blockquote class="blockquote">
+                        Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, 
+                        so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    </blockquote>
+                    <cite class="cite">
+                        <img class="section__testimonials--img" src="./images/customer-1.jpg" alt="Alberto Duncan">
+                        (Alberto Duncan)
+                    </cite>
+                </div>
+                    <div class="col span-1-of-3 box">
+                        <blockquote class="blockquote">
+                            Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food 
+                            delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!   
+                        </blockquote>
+                        <cite class="cite">
+                            <img class="section__testimonials--img" src="./images/customer-2.jpg" alt="Joana Silva">
+                            (Joana Silva)
+                        </cite>
+                    </div>
+                    <div class="col span-1-of-3 box">
+                        <blockquote class="blockquote">
+                            I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and 
+                            ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                        </blockquote>
+                        <cite class="cite">
+                            <img class="section__testimonials--img" src="./images/customer-3.jpg" alt="Milton Chapman">
+                            (Milton Chapman)
+                        </cite>
+                    </div>
+            </div>
+           
+
+
+        </section>
     </main>
 
 </body>
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
 </html>
+
+
