--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
         rel="stylesheet">
@@ -28,8 +30,8 @@
         </nav>
         <div class="header__text-box">
             <h1 class="heading-primary">Goodbye junk food. <br>Hello super healthy meals</h1>
-            <a class="btn btn-full" href="#">I'm hungry</a>
-            <a class="btn btn-ghost" href="#">Show me more</a>
+            <a class="btn btn-full" href="#">Hello Liam</a>
+            <a class="btn btn-ghost" href="#">Benson is cool</a>
         </div>
     </header>
     <main>
@@ -146,8 +148,11 @@
                         <div class="section__steps--circle">3</div>
                         <p>Enjoy meal after less than 20 minutes. See you the next time!</p>
                     </div>
-                    <a href="#" class="btn-app"><img src="images/download-app.svg" alt="App Store Button"></a>
-                    <a href="#" class="btn-app"><img src="images/download-app-android.png" alt="App Store Button"></a>
+                    <div class="app__bottons">
+                        <a href="#" class="btn-app"><img src="images/download-app.svg" alt="App Store Button"></a>
+                        <a href="#" class="btn-app"><img src="images/download-app-android.png" alt="App Store Button"></a>
+                    </div>
+                  
                 </div>
             </div>
         </section>
@@ -381,66 +386,118 @@
             <div class="row">
                 <h2 class="heading-secondary">We're happy to hear from you</h2>
             </div>
+
+            <div class="row">
+                <form method="POST" action="#" class="contact__form">
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="text" name="name" id="name" placeholder="Your name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="email" name="email" id="email" placeholder="Your email" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>How did you find us</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <select id="find-us">
+                                <option value="friends" selected>Friends</option>
+                                <option value="search engine">Search engine</option>
+                                <option value="advertisement">Advertisement</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="news">Newsletter</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="checkbox" name="news" id="news" checked>Yes, please
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>Drop us a line</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <textarea class="form-control" placeholder="Your message" rows="4"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>&nbsp;</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="submit" value="Send it!">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </section>
-        <div class="row">
-            <form method="POST" action="#" class="contact__form">
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="name">Name</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="text" name="name" id="name" placeholder="Your name" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="email">Email</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="email" name="email" id="email" placeholder="Your email" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label>How did you find us</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <select id="find-us">
-                            <option value="friends" selected>Friends</option>
-                            <option value="search engine">Search engine</option>
-                            <option value="advertisement">Advertisement</option>
-                            <option value="other">Other</option>
-                        </select>
-                    </div>
-                    <div class="row">
-                        <div class="col span-1-of-3">
-                            <label for="news">Newsletter</label>
-                        </div>
-                        <div class="col span-2-of-3">
-                            <input type="checkbox" name="news" id="news" checked>Yes, please
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col span-1-of-3">
-                            <label>Drop us a line</label>
-                        </div>
-                        <div class="col span-2-of-3">
-                            <textarea class="form-control" placeholder="Your message" rows="4"></textarea>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col span-1-of-3">
-                            <label>&nbsp;</label>
-                        </div>
-                        <div class="col span-2-of-3">
-                            <input type="submit" value="Send it!">
-                        </div>
-                    </div>
-                </div>
-        </div>
-        </form>
-        </div>
+        
+
     </main>
+    <footer class="footer">
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer__nav">
+                    <li>
+                        <a class="footer__nav--link" href="#">About us</a>
+                    </li>
+                    <li>
+                        <a class="footer__nav--link" href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a class="footer__nav--link" href="#">Press</a>
+                    </li>
+                    <li>
+                        <a  class="footer__nav--link" href="#">iOS App</a>
+                    </li>
+                    <li>
+                        <a class="footer__nav--link" href="#">Android App</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="footer__social">
+                    <li>
+                        <a class="footer__social--link" href="#">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer__social--link" href="#">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer__social--link" href="#">
+                            <ion-icon name="logo-google"></ion-icon>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer__social--link" href="#">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <span>Copyright &copy; 2020 by Omnifoods. All right reserved.</span>
+        </div>
+    </footer>
 
 </body>
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
