--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -305,7 +305,6 @@
                             <h3 class="heading-tertiary">Starter</h3>
                             <p class="plan__box-price">$19<Span>/ meal</Span></p>
                             <p class="plan__box-meal">&nbsp;</p>
-
                         </div>
                         <div>
                             <ul class="plan__box-list">
@@ -466,8 +465,7 @@
                 </form>
             </div>
         </section>
-        
-
+    
     </main>
     <footer class="footer">
         <div class="row">
@@ -494,23 +492,22 @@
                 <ul class="footer__social">
                     <li>
                         <a class="footer__social--link" href="#">
-                            <ion-icon name="logo-facebook"></ion-icon>
+                            <i class="ion-social-facebook"></i>
                         </a>
                     </li>
                     <li>
                         <a class="footer__social--link" href="#">
-                            <ion-icon name="logo-twitter"></ion-icon>
+                            <i class="ion-social-twitter"></i>
                         </a>
                     </li>
                     <li>
                         <a class="footer__social--link" href="#">
-                            <ion-icon name="logo-google"></ion-icon>
+                            <i class="ion-social-googleplus"></i>
                         </a>
                     </li>
                     <li>
                         <a class="footer__social--link" href="#">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
+                            <i class="ion-social-instagram"></i>                        </a>
                     </li>
                 </ul>
             </div>
