updated mobile nav

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap">
 
+    <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="vendors/favicon/favicon_package_v0.16/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="vendors/favicon/favicon_package_v0.16/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="vendors/favicon/favicon_package_v0.16/favicon-16x16.png">
@@ -29,16 +30,16 @@
 
 <body>
     <header class="header">
-        <nav class="main__nav">
+        <nav>
             <div class="row">
                 <img class="main__nav-logo" src="./images/logo-white.png" alt="Logo">
                 <img class="main__nav-logo--black" src="./images/logo.png" alt="Logo">
 
-                <ul class="main__nav-list js--main__nav-list">
-                    <li class="main__nav-item"><a href="#features" class="main__nav-link js--scroll-to-features">Food delivery</a></li>
-                    <li class="main__nav-item"><a href="#steps" class="main__nav-link js--scroll-to-steps">How it works</a> </li>
-                    <li class="main__nav-item"><a href="#cities" class="main__nav-link js--scroll-to-cities">Our cities</a> </li>
-                    <li class="main__nav-item"><a href="#plans" class="main__nav-link js--scroll-to-plans">Sign up</a> </li>
+                <ul class="main__nav js--main__nav">
+                    <li><a href="#features" class="main__nav-link js--scroll-to-features">Food delivery</a></li>
+                    <li><a href="#steps" class="main__nav-link js--scroll-to-steps">How it works</a> </li>
+                    <li><a href="#cities" class="main__nav-link js--scroll-to-cities">Our cities</a> </li>
+                    <li><a href="#plans" class="main__nav-link js--scroll-to-plans">Sign up</a> </li>
                 </ul>
                 <a href="" class="mobile__nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
 
@@ -50,6 +51,7 @@
             <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
         </div>
     </header>
+
     <main>
         <section class="section__features js--section__features" id="features">
             <div class="row">
@@ -157,23 +159,22 @@
                     <img class="section__steps--app-screen js--wp-2" src="./images/app-iPhone.png" alt="Omnifood app on iphone">
                 </div>
                 <div class="col span-1-of-2 steps-box">
-                    <div class="section__steps-work--step">
+                    <div class="section__steps-work--step clearfix">
                         <div class="section__steps-circle">1</div>
                         <p>Choose the subscription plan that best fits your needs and sign up today</p>
                     </div>
-                    <div class="section__steps-work--step">
+                    <div class="section__steps-work--step clearfix">
                         <div class="section__steps-circle">2</div>
                         <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
                     </div>
-                    <div class="section__steps-work--step">
+                    <div class="section__steps-work--step clearfix">
                         <div class="section__steps-circle">3</div>
                         <p>Enjoy meal after less than 20 minutes. See you the next time!</p>
                     </div>
                     <div class="app__bottons">
                         <a href="#" class="btn-app"><img src="images/download-app.svg" alt="App Store Button"></a>
                         <a href="#" class="btn-app"><img src="images/download-app-android.png" alt="App Store Button"></a>
-                    </div>
-                  
+                    </div> 
                 </div>
             </div>
         </section>
@@ -185,68 +186,68 @@
             <div class="row js--wp-3">
                 <div class="col span-1-of-4 box">
                     <img class="city__features--img" src="./images/lisbon-3.jpg" alt="Lisbon">
-                    <h3 class="heading-tertiary">Lisbon</h3>
+                    <h3 class="heading-tertiary-left">Lisbon</h3>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        <i class="ion-ios-person icon-small"></i>
                         600+ happy eaters
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        <i class="ion-ios-star icon-small"></i>
                         60+ top chefs
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>
+                        <i class="ion-social-twitter icon-small"></i>
                         <a href="" class="city__features--link">@omnifood_xl</a>
                     </div>
                 </div>
 
                 <div class="col span-1-of-4 box">
                     <img class="city__features--img" src="./images/san-francisco.jpg" alt="San Francisco">
-                    <h3 class="heading-tertiary">San Francisco</h3>
+                    <h3 class="heading-tertiary-left">San Francisco</h3>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        <i class="ion-ios-person icon-small"></i>
                         3700+ happy eaters
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        <i class="ion-ios-star icon-small"></i>
                         160+ top chefs
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>
+                        <i class="ion-social-twitter icon-small"></i>
                         <a href="" class="city__features--link">@omnifood_xl</a>
                     </div>
                 </div>
 
                 <div class="col span-1-of-4 box">
                     <img class="city__features--img" src="./images/berlin.jpg" alt="Berlin">
-                    <h3 class="heading-tertiary">Berlin</h3>
+                    <h3 class="heading-tertiary-left">Berlin</h3>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        <i class="ion-ios-person icon-small"></i>
                         2300+ happy eaters
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        <i class="ion-ios-star icon-small"></i>
                         110+ top chefs
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>
+                        <i class="ion-social-twitter icon-small"></i>
                         <a href="" class="city__features--link">@omnifood_xl</a>
                     </div>
                 </div>
 
                 <div class="col span-1-of-4 box">
                     <img class="city__features--img" src="./images/london.jpg" alt="London">
-                    <h3 class="heading-tertiary">London</h3>
+                    <h3 class="heading-tertiary-left">London</h3>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="person"></ion-icon>
+                        <i class="ion-ios-person icon-small"></i>
                         1200+ happy eaters
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="star"></ion-icon>
+                        <i class="ion-ios-star icon-small"></i>
                         50+ top chefs
                     </div>
                     <div class="city__features">
-                        <ion-icon class="city__features--logo icon-small" name="logo-twitter"></ion-icon>
+                        <i class="ion-social-twitter icon-small"></i>
                         <a href="" class="city__features--link">@omnifood_xl</a>
                     </div>
                 </div>
@@ -299,6 +300,7 @@
                 <h2 class="heading-secondary">Start eating healthy today</h2>
             </div>
             <div class="row">
+
                 <div class="col span-1-of-3 box">
                     <div class="plan__box">
                         <div>
@@ -306,31 +308,29 @@
                             <p class="plan__box-price">$19<Span>/ meal</Span></p>
                             <p class="plan__box-meal">&nbsp;</p>
                         </div>
-                        <div>
+
+                        <div class="plan__features">
                             <ul class="plan__box-list">
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
-                                    1 meal
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
+                                    1 meal 
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
-                                    Order from 8 am to 12 pm
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
+                                    Order from 8 to 12
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="close-outline"></ion-icon>
+                                    <i class="ion-ios-close-empty icon-small"></i>
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
-                                    free delivery
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>                                    free delivery
                                 </li>
                             </ul>
                         </div>
                         <div>
                             <a href="#" class="btn btn-ghost">Sign up now</a>
                         </div>
-
                     </div>
-
                 </div>
                 <div class="col span-1-of-3 box">
                     <div class="plan__box primium js--wp-4">
@@ -342,19 +342,19 @@
                         <div>
                             <ul class="plan__box-list">
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     1 meal everyday
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     Order 24/7
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     Access to newest creations
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     free delivery
                                 </li>
                             </ul>
@@ -363,8 +363,6 @@
                             <a href="#" class="btn btn-full">Sign up now</a>
                         </div>
                     </div>
-
-
                 </div>
                 <div class="col span-1-of-3 box">
                     <div class="plan__box">
@@ -377,20 +375,19 @@
                         <div class="plan__features">
                             <ul class="plan__box-list">
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     1 meal 10 days/month
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     Order 24/7
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>
                                     Access to newest creations
                                 </li>
                                 <li>
-                                    <ion-icon class="icon-small plan__box-icon" name="checkmark-outline"></ion-icon>
-                                    free delivery
+                                    <i class="ion-ios-checkmark-empty icon-small"></i>                                    free delivery
                                 </li>
                             </ul>
                         </div>
@@ -517,10 +514,10 @@
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script> -->
     <script src="./vendors/js/jquery.waypoints.min.js"></script>
     <script src="./js/main.js"></script>
