--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -28,163 +28,10 @@
 
     <title>Omnifood</title>
 
-    <!-- <style>
-        .main-nav {
-            float: right;
-            list-style: none;
-            margin-top: 55px;
-        }
-
-        .main-nav li {
-            display: inline-block;
-            margin-left: 40px;
-        }
-
-        .main-nav li a:link,
-        .main-nav li a:visited {
-            padding: 8px 0;
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 90%;
-            border-bottom: 2px solid transparent;
-            -webkit-transition: border-bottom 0.2s;
-            transition: border-bottom 0.2s;
-        }
-
-        .main-nav li a:hover,
-        .main-nav li a:active {
-            border-bottom: 2px solid #e67e22;
-        }
-
-
-        /* Mobile navi */
-        .mobile-nav-icon {
-            float: right;
-            margin-top: 30px;
-            cursor: pointer;
-            display: none;
-        }
-
-        .mobile-nav-icon i {
-            font-size: 200%;
-            color: #fff;
-        }
-
-
-        /* Sticky navi */
-        .sticky {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(255, 255, 255, 0.98);
-            box-shadow: 0 2px 2px #efefef;
-            z-index: 9999;
-        }
-
-        .sticky .main-nav {
-            margin-top: 18px;
-        }
-
-        .sticky .main-nav li a:link,
-        .sticky .main-nav li a:visited {
-            padding: 16px 0;
-            color: #555;
-        }
-
-        .sticky .logo {
-            display: none;
-        }
-
-        .sticky .logo-black {
-            display: block;
-        }
-
-        /* Small phones to small tablets: from 481px to 767px */
-        @media only screen and (max-width: 767px) {
-
-            .main-nav {
-                display: none;
-            }
-
-            .mobile-nav-icon {
-                display: inline-block;
-            }
-
-            .main-nav {
-                float: left;
-                margin-top: 30px;
-                margin-left: 25px;
-            }
-
-            .main-nav li {
-                display: block;
-            }
-
-            .main-nav li a:link,
-            .main-nav li a:visited {
-                display: block;
-                border: 0;
-                padding: 10px 0;
-                font-size: 100%;
-            }
-
-            .sticky .main-nav {
-                margin-top: 10px;
-            }
-
-            .sticky .main-nav li a:link,
-            .sticky .main-nav li a:visited {
-                padding: 10px 0;
-            }
-
-            .sticky .mobile-nav-icon {
-                margin-top: 10px;
-            }
-
-            .sticky .mobile-nav-icon i {
-                color: #555;
-            }
-
-
-        }
-
-        .logo {
-            height: 100px;
-            width: auto;
-            float: left;
-            margin-top: 20px;
-        }
-
-        .logo-black {
-            display: none;
-            height: 50px;
-            width: auto;
-            float: left;
-            margin: 5px 0;
-        }
-    </style> -->
 </head>
-
-
 
 <body>
     <header class="header">
-        <!-- <nav>
-            <div class="row">
-                <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
-                <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
-                <ul class="main-nav js--main-nav">
-                    <li><a href="#features">Food delivery</a></li>
-                    <li><a href="#works">How it works</a></li>
-                    <li><a href="#cities">Our cities</a></li>
-                    <li><a href="#plans">Sign up</a></li>
-                </ul>
-                <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
-            </div>
-        </nav> -->
-
         <nav>
             <div class="row">
                 <img src="./images/logo-white.png" alt="Omnifood logo" class="logo">
@@ -256,7 +103,7 @@
             </div>
         </section>
 
-        <section class="section__meals js--section__meals">
+        <section class="section__meals">
             <ul class="section__meals--showcase clearfix">
                 <li class="section__meals--showcase-item">
                     <figure class="section__meals--showcase-foto">
@@ -303,7 +150,7 @@
             </ul>
         </section>
 
-        <section class="section__steps js--section__steps" id="steps">
+        <section class="section__steps" id="works">
             <div class="row">
                 <h2 class="heading-secondary">How it works &mdash; simple as 1,2,3</h2>
             </div>
@@ -334,7 +181,7 @@
             </div>
         </section>
 
-        <section class="section__cities js--section__cities" id="cities">
+        <section class="section__cities" id="cities">
             <div class="row">
                 <h2 class="heading-secondary">We're currently in the these cities</h2>
             </div>
@@ -409,7 +256,7 @@
             </div>
         </section>
 
-        <section class="section__testimonials js--section__testimonials">
+        <section class="section__testimonials">
             <div class="row">
                 <h2 class="heading-secondary">Our costumers can't live without us</h2>
             </div>
@@ -673,8 +520,7 @@
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
-    <!-- <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script> -->
-    <script src="./vendors/js/jquery.waypoints.min.js"></script>
+s    <script src="./vendors/js/jquery.waypoints.min.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
