updated mobile version

--- a/omnifood.com/index.html
+++ b/omnifood.com/index.html
@@ -514,6 +514,15 @@
         <div class="row">
             <span>Copyright &copy; 2020 by Omnifoods. All right reserved.</span>
         </div>
+        <a href="tel:+380635676242">
+            <div class="container">
+              <div class="back-circle"></div>
+              <div class="button"></div>
+              <div class="front-circle"></div>
+              <i class="ion-ios-telephone"></i>
+            </div>
+          </a>
+    
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
