--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -91,7 +91,7 @@
                         learning new things, and recently discovered a love for Virgil's Rootbeer!</p>
                 </div>
             </div>
-            <img src="./img/jr-white.png" class="about__items-img" alt="Jaime Rosales" />
+            <img src="./img/JR-white.png" class="about__items-img" alt="Jaime Rosales" />
         </section>
 
         <!-- Project Section -->
