--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -103,7 +103,7 @@
 
                 <!-- Trillo Project -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/trillo.jpg" alt="Trillo Project" />
+                    <img src="./img/projects/trillo.jpg" alt="Trillo Project">
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Web App</p>
@@ -116,7 +116,7 @@
                 <div class="popup" id="trillo-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/trillo.png" alt="Trillo Project" class="popup__img">
+                            <img src="./img/projects/trillo.png" alt="Trillo Project" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#porfolio" class="popup__close">&times;</a>
@@ -145,7 +145,7 @@
 
                 <!-- Natours -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/natours.jpg" alt="Natours Project" />
+                    <img src="./img/projects/natours.jpg" alt="Natours Project" />
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Website</p>
@@ -158,7 +158,7 @@
                 <div class="popup" id="natours-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/natours.png" alt="Natours Project" class="popup__img">
+                            <img src="./img/projects/natours.png" alt="Natours Project" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#natours-tours" class="popup__close">&times;</a>
@@ -186,7 +186,7 @@
 
                 <!-- Nexter Project -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/nexter.jpg" alt="Nexter Project" />
+                    <img src="./img/projects/nexter.jpg" alt="Nexter Project"/>
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Website</p>
@@ -199,7 +199,7 @@
                 <div class="popup" id="nexter-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/nexter.png" alt="Nexter Project" class="popup__img">
+                            <img src="./img/projects/nexter.png" alt="Nexter Project" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#section-tours" class="popup__close">&times;</a>
@@ -227,7 +227,7 @@
 
                 <!-- Vesco Project-->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/vesco.jpg" alt="Vesco" />
+                    <img src="./img/projects/vesco.jpg" alt="Vesco"/>
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Website</p>
@@ -240,7 +240,7 @@
                 <div class="popup" id="vesco-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/vesco.png" alt="Vesco Project" class="popup__img">
+                            <img src="./img/projects/vesco.png" alt="Vesco Project" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#vesco-tours" class="popup__close">&times;</a>
@@ -268,7 +268,7 @@
 
                 <!-- Portfolio Project -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/portfolio.jpg" alt="Portfolio" />
+                    <img src="./img/projects/portfolio.jpg" alt="Portfolio"/>
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Website</p>
@@ -281,7 +281,7 @@
                 <div class="popup" id="portfolio-popup">
                     <div class="popup__content">
                         <div class="popup__left">
-                            <img src="/img/projects/portfolio.png" alt="Natours photo" class="popup__img">
+                            <img src="./img/projects/portfolio.png" alt="Natours photo" class="popup__img">
                         </div>
                         <div class="popup__right">
                             <a href="#portfolio-tours" class="popup__close">&times;</a>
@@ -309,7 +309,7 @@
 
                 <!-- Omnifood -->
                 <figure class="portfolio-content">
-                    <img src="/img/projects/omnifood.jpg" alt="Omnifood" />
+                    <img src="./img/projects/omnifood.jpg" alt="Omnifood"/>
                     <div class="content-overlay"></div>
                     <figcaption class="portfolio-content__text">
                         <p class="portfolio-content__text-sub-title">Website</p>
@@ -323,7 +323,7 @@
             <div class="popup" id="omnifood-popup">
                 <div class="popup__content">
                     <div class="popup__left">
-                        <img src="/img/projects/omnifood.png" alt="Omnifood" class="popup__img">
+                        <img src="./img/projects/omnifood.png" alt="Omnifood" class="popup__img">
                     </div>
                     <div class="popup__right">
                         <a href="#section-omnifood" class="popup__close">&times;</a>
@@ -360,7 +360,7 @@
         </section>
 
         <!-- <h2 class="heading-secondary ">Skills</h2> -->
-        <section class="section__skills" id="skills">>
+        <section class="section__skills" id="skills">
             <h2 class="heading-secondary ">Skills</h2>
                 <div class="skills">
                     <div class="skill__icon">
