--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -39,7 +39,7 @@
             <div class="menu-branding">
                 <div class="portrait"></div>
             </div>
-            <ul class="menu-nav navbar-collapse">
+            <ul class="menu-nav">
                 <li class="nav-item active">
                     <a href="#home" class="nav-link" data-text="home">Home</a>
                 </li>
