--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -440,8 +440,7 @@
         </ul>
         <p class="copyright">&copy; jaimewebdev.com 2021</p>
 
-        <script src="/js/main.js"></script>
-        <!-- <script src="contact.php"></script> -->
+        <script src="./js/main.js"></script>
 
 </body>
 
