--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -69,12 +69,53 @@
             <a href="#portfolio" class="btn_header"><span>View Projects</span></a>
         </div>
         <div class="wrapper">
-            <!-- begin Scroll Down Button -->
-            <button type="button" class="scroll_down" id="scroll_down"></button>
-            <!-- end Scroll Down Button -->
-        </div>
 
+            <!-- begin Scroll Down Button  -->
+            <button type="button" class="scroll_down" id="scroll_down"></button>
+        </div>
     </header>
+
+<!-- 
+    <div class="menu-btn navbar-toggle">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+    </div>
+
+    <nav class="menu">
+        <div class="menu-branding">
+            <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+            <li class="nav-item active">
+                <a href="#home" class="nav-link" data-text="home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#about" class="nav-link" data-text="about">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="#portfolio" class="nav-link" data-text="projects">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a href="#skills" class="nav-link" data-text="skills">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link" data-text="contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="header">
+        <div class="header__text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary--main">Jaime Rosales</span>
+                <span class="heading-primary--sub">is where life happens</span>
+            </h1>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+        </div>
+    </header> -->
+
+
     <main>
         <section class="about" id="about">
             <!-- <h2 class="heading-secondary" data-text="About me">About me</h2> -->
